headers/RadarKit/RKTest.h

int RKTestHealthRelayExec(RKHealthRelay, const char *, char *);
int RKTestHealthRelayFree(RKHealthRelay);
//

void RKTestCommandQueue(void);
void RKTestSingleCommand(void);
void RKTestExperiment(const int, const void **);