python/radarkit/_ctypes_.py


# headers/RadarKit/RKTest.h: 189
if _libs["radarkit"].has("RKTestHealthRelayExec", "cdecl"):
    RKTestHealthRelayExec = _libs["radarkit"].get("RKTestHealthRelayExec", "cdecl")
    RKTestHealthRelayExec.argtypes = [RKHealthRelay, String, String]
    RKTestHealthRelayExec.restype = c_int

# headers/RadarKit/RKTest.h: 190
if _libs["radarkit"].has("RKTestHealthRelayFree", "cdecl"):
    RKTestHealthRelayFree = _libs["radarkit"].get("RKTestHealthRelayFree", "cdecl")
    RKTestHealthRelayFree.argtypes = [RKHealthRelay]
    RKTestHealthRelayFree.restype = c_int

# headers/RadarKit/RKTest.h: 194
if _libs["radarkit"].has("RKTestCommandQueue", "cdecl"):
    RKTestCommandQueue = _libs["radarkit"].get("RKTestCommandQueue", "cdecl")
    RKTestCommandQueue.argtypes = []
    RKTestCommandQueue.restype = None

# headers/RadarKit/RKTest.h: 195
if _libs["radarkit"].has("RKTestSingleCommand", "cdecl"):
    RKTestSingleCommand = _libs["radarkit"].get("RKTestSingleCommand", "cdecl")
    RKTestSingleCommand.argtypes = []
    RKTestSingleCommand.restype = None

# headers/RadarKit/RKTest.h: 196
if _libs["radarkit"].has("RKTestExperiment", "cdecl"):
    RKTestExperiment = _libs["radarkit"].get("RKTestExperiment", "cdecl")
    RKTestExperiment.argtypes = []
    RKTestExperiment.restype = None

# /mnt/k/OU/RadarKit/headers/RadarKit/RKTypes.h: 11
try:
    __STDC_WANT_LIB_EXT1__ = 1
except:
    pass

# /usr/include/math.h: 1151
try:
    M_PI = 3.14159265358979323846
except:
    pass

# /usr/include/x86_64-linux-gnu/sys/param.h: 102
def MIN(a, b):
    return (a < b) and a or b

# /usr/include/x86_64-linux-gnu/sys/param.h: 103
def MAX(a, b):
    return (a > b) and a or b

# /usr/include/asm-generic/errno-base.h: 8
try:
    EINTR = 4
except:
    pass

# /usr/include/asm-generic/errno-base.h: 9
try:
    EIO = 5
except:
    pass

# /usr/include/asm-generic/errno-base.h: 13
try:
    EBADF = 9
except:
    pass

# /usr/include/asm-generic/errno-base.h: 15
try:
    EAGAIN = 11
except:
    pass

# /usr/include/asm-generic/errno-base.h: 17
try:
    EACCES = 13
except:
    pass

# /usr/include/asm-generic/errno-base.h: 18
try:
    EFAULT = 14
except:
    pass

# /usr/include/asm-generic/errno-base.h: 26
try:
    EINVAL = 22
except:
    pass

# /usr/include/asm-generic/errno.h: 94
try:
    ECONNREFUSED = 111
except:
    pass

# /usr/include/asm-generic/errno.h: 95
try:
    EHOSTDOWN = 112
except:
    pass

# /usr/include/asm-generic/errno.h: 96
try:
    EHOSTUNREACH = 113
except:
    pass

# /usr/include/errno.h: 38
try:
    errno = ((__errno_location ())[0])
except:
    pass

# /mnt/k/OU/RadarKit/headers/RadarKit/RKTypes.h: 60
try:
    RKRawDataVersion = 7
except:
    pass

# /mnt/k/OU/RadarKit/headers/RadarKit/RKTypes.h: 61
try:
    RKBufferSSlotCount = 10
except:
    pass

# /mnt/k/OU/RadarKit/headers/RadarKit/RKTypes.h: 62
try:
    RKBufferCSlotCount = 10
except:
    pass

# /mnt/k/OU/RadarKit/headers/RadarKit/RKTypes.h: 63
try:
    RKBufferHSlotCount = 50
except:
    pass

# /mnt/k/OU/RadarKit/headers/RadarKit/RKTypes.h: 64
try:
    RKBufferPSlotCount = 1000
except:
    pass

# /mnt/k/OU/RadarKit/headers/RadarKit/RKTypes.h: 65
try:
    RKBuffer0SlotCount = 20000
except:
    pass

# /mnt/k/OU/RadarKit/headers/RadarKit/RKTypes.h: 66
try:
    RKBuffer2SlotCount = 3600
except:
    pass

# /mnt/k/OU/RadarKit/headers/RadarKit/RKTypes.h: 67
try:
    RKBuffer3SlotCount = 100
except:
    pass

# /mnt/k/OU/RadarKit/headers/RadarKit/RKTypes.h: 68
try:
    RKMaximumControlCount = 128
except:
    pass

# /mnt/k/OU/RadarKit/headers/RadarKit/RKTypes.h: 69
try:
    RKMaximumWaveformCalibrationCount = 128
except:
    pass

# /mnt/k/OU/RadarKit/headers/RadarKit/RKTypes.h: 70
try:
    RKMaximumGateCount = 262144
except:
    pass

# /mnt/k/OU/RadarKit/headers/RadarKit/RKTypes.h: 71
try:
    RKMemoryAlignSize = 64
except:
    pass

# /mnt/k/OU/RadarKit/headers/RadarKit/RKTypes.h: 72
try:
    RKMomentCount = 26
except:
    pass

# /mnt/k/OU/RadarKit/headers/RadarKit/RKTypes.h: 73
try:
    RKBaseProductCount = 16
except:
    pass

# /mnt/k/OU/RadarKit/headers/RadarKit/RKTypes.h: 74
try:
    RKMaximumLagCount = 5
except:
    pass

# /mnt/k/OU/RadarKit/headers/RadarKit/RKTypes.h: 75
try:
    RKMaximumFilterCount = 8
except:
    pass

# /mnt/k/OU/RadarKit/headers/RadarKit/RKTypes.h: 76
try:
    RKMaximumWaveformCount = 22
except:
    pass

# /mnt/k/OU/RadarKit/headers/RadarKit/RKTypes.h: 77
try:
    RKWorkerDutyCycleBufferDepth = 1000
except:
    pass

# /mnt/k/OU/RadarKit/headers/RadarKit/RKTypes.h: 78
try:
    RKMaximumPulsesPerRay = 2000
except:
    pass

# /mnt/k/OU/RadarKit/headers/RadarKit/RKTypes.h: 79
try:
    RKMaximumRaysPerSweep = 1500
except:
    pass

# /mnt/k/OU/RadarKit/headers/RadarKit/RKTypes.h: 80
try:
    RKMaximumPacketSize = ((16 * 1024) * 1024)
except:
    pass

# /mnt/k/OU/RadarKit/headers/RadarKit/RKTypes.h: 81
try:
    RKNetworkTimeoutSeconds = 20
except:
    pass

# /mnt/k/OU/RadarKit/headers/RadarKit/RKTypes.h: 82
try:
    RKNetworkReconnectSeconds = 3
except:
    pass

# /mnt/k/OU/RadarKit/headers/RadarKit/RKTypes.h: 83
try:
    RKLagRedThreshold = 0.5
except:
    pass

# /mnt/k/OU/RadarKit/headers/RadarKit/RKTypes.h: 84
try:
    RKLagOrangeThreshold = 0.7
except:
    pass

# /mnt/k/OU/RadarKit/headers/RadarKit/RKTypes.h: 85
try:
    RKDutyCyleRedThreshold = 0.9
except:
    pass

# /mnt/k/OU/RadarKit/headers/RadarKit/RKTypes.h: 86
try:
    RKDutyCyleOrangeThreshold = 0.8
except:
    pass

# /mnt/k/OU/RadarKit/headers/RadarKit/RKTypes.h: 87
try:
    RKStatusBarWidth = 6
except:
    pass

# /mnt/k/OU/RadarKit/headers/RadarKit/RKTypes.h: 88
try:
    RKPulseCountForNoiseMeasurement = 200
except:
    pass

# /mnt/k/OU/RadarKit/headers/RadarKit/RKTypes.h: 89
try:
    RKProcessorStatusPulseCoreCount = 16
except:
    pass

# /mnt/k/OU/RadarKit/headers/RadarKit/RKTypes.h: 90
try:
    RKProcessorStatusRingCoreCount = 16
except:
    pass

# /mnt/k/OU/RadarKit/headers/RadarKit/RKTypes.h: 91
try:
    RKProcessorStatusRayCoreCount = 16
except:
    pass

# /mnt/k/OU/RadarKit/headers/RadarKit/RKTypes.h: 92
try:
    RKHostMonitorPingInterval = 5
except:
    pass

# /mnt/k/OU/RadarKit/headers/RadarKit/RKTypes.h: 93
try:
    RKMaximumProductCount = 64
except:
    pass

# /mnt/k/OU/RadarKit/headers/RadarKit/RKTypes.h: 94
try:
    RKMaximumIIRFilterTaps = 8
except:
    pass

# /mnt/k/OU/RadarKit/headers/RadarKit/RKTypes.h: 95
try:
    RKMaximumPrefixLength = 8
except:
    pass

# /mnt/k/OU/RadarKit/headers/RadarKit/RKTypes.h: 96
try:
    RKMaximumSymbolLength = 8
except:
    pass

# /mnt/k/OU/RadarKit/headers/RadarKit/RKTypes.h: 97
try:
    RKMaximumFileExtensionLength = 8
except:
    pass

# /mnt/k/OU/RadarKit/headers/RadarKit/RKTypes.h: 98
try:
    RKUserParameterCount = 8
except:
    pass

# /mnt/k/OU/RadarKit/headers/RadarKit/RKTypes.h: 99
try:
    RKMaximumScanCount = 256
except:
    pass

# /mnt/k/OU/RadarKit/headers/RadarKit/RKTypes.h: 100
try:
    RKPedestalActionBufferDepth = 8
except:
    pass

# /mnt/k/OU/RadarKit/headers/RadarKit/RKTypes.h: 101
try:
    RKDefaultScanSpeed = 18.0
except:
    pass

# /mnt/k/OU/RadarKit/headers/RadarKit/RKTypes.h: 103
try:
    RKDefaultDataPath = 'data'
except:
    pass

# /mnt/k/OU/RadarKit/headers/RadarKit/RKTypes.h: 104
try:
    RKDataFolderIQ = 'iq'
except:
    pass

# /mnt/k/OU/RadarKit/headers/RadarKit/RKTypes.h: 105
try:
    RKDataFolderMoment = 'moment'
except:
    pass

# /mnt/k/OU/RadarKit/headers/RadarKit/RKTypes.h: 106
try:
    RKDataFolderHealth = 'health'
except:
    pass

# /mnt/k/OU/RadarKit/headers/RadarKit/RKTypes.h: 107
try:
    RKLogFolder = 'log'
except:
    pass

# /mnt/k/OU/RadarKit/headers/RadarKit/RKTypes.h: 108
try:
    RKWaveformFolder = 'waveforms'
except:
    pass

# /mnt/k/OU/RadarKit/headers/RadarKit/RKTypes.h: 109
try:
    RKFFTWisdomFile = 'radarkit-fft-wisdom'
except:
    pass

# /mnt/k/OU/RadarKit/headers/RadarKit/RKTypes.h: 111
try:
    RKNoColor = '\\033[m'
except:
    pass

# /mnt/k/OU/RadarKit/headers/RadarKit/RKTypes.h: 112
try:
    RKNoForegroundColor = '\\033[39m'
except:
    pass

# /mnt/k/OU/RadarKit/headers/RadarKit/RKTypes.h: 113
try:
    RKNoBackgroundColor = '\\033[49m'
except:
    pass

# /mnt/k/OU/RadarKit/headers/RadarKit/RKTypes.h: 114
try:
    RKBaseRedColor = '\\033[91m'
except:
    pass

# /mnt/k/OU/RadarKit/headers/RadarKit/RKTypes.h: 115
try:
    RKBaseGreenColor = '\\033[92m'
except:
    pass

# /mnt/k/OU/RadarKit/headers/RadarKit/RKTypes.h: 116
try:
    RKBaseYellowColor = '\\033[93m'
except:
    pass

# /mnt/k/OU/RadarKit/headers/RadarKit/RKTypes.h: 117
try:
    RKRedColor = '\\033[38;5;196m'
except:
    pass

# /mnt/k/OU/RadarKit/headers/RadarKit/RKTypes.h: 118
try:
    RKOrangeColor = '\\033[38;5;208m'
except:
    pass

# /mnt/k/OU/RadarKit/headers/RadarKit/RKTypes.h: 119
try:
    RKYellowColor = '\\033[38;5;226m'
except:
    pass

# /mnt/k/OU/RadarKit/headers/RadarKit/RKTypes.h: 120
try:
    RKCreamColor = '\\033[38;5;229m'
except:
    pass

# /mnt/k/OU/RadarKit/headers/RadarKit/RKTypes.h: 121
try:
    RKLimeColor = '\\033[38;5;118m'
except:
    pass

# /mnt/k/OU/RadarKit/headers/RadarKit/RKTypes.h: 122
try:
    RKMintColor = '\\033[38;5;43m'
except:
    pass

# /mnt/k/OU/RadarKit/headers/RadarKit/RKTypes.h: 123
try:
    RKGreenColor = '\\033[38;5;46m'
except:
    pass

# /mnt/k/OU/RadarKit/headers/RadarKit/RKTypes.h: 124
try:
    RKTealColor = '\\033[38;5;49m'
except:
    pass

# /mnt/k/OU/RadarKit/headers/RadarKit/RKTypes.h: 125
try:
    RKIceBlueColor = '\\033[38;5;51m'
except:
    pass

# /mnt/k/OU/RadarKit/headers/RadarKit/RKTypes.h: 126
try:
    RKSkyBlueColor = '\\033[38;5;45m'
except:
    pass

# /mnt/k/OU/RadarKit/headers/RadarKit/RKTypes.h: 127
try:
    RKBlueColor = '\\033[38;5;27m'
except:
    pass

# /mnt/k/OU/RadarKit/headers/RadarKit/RKTypes.h: 128
try:
    RKPurpleColor = '\\033[38;5;99m'
except:
    pass

# /mnt/k/OU/RadarKit/headers/RadarKit/RKTypes.h: 129
try:
    RKIndigoColor = '\\033[38;5;201m'
except:
    pass

# /mnt/k/OU/RadarKit/headers/RadarKit/RKTypes.h: 130
try:
    RKHotPinkColor = '\\033[38;5;199m'
except:
    pass

# /mnt/k/OU/RadarKit/headers/RadarKit/RKTypes.h: 131
try:
    RKDeepPinkColor = '\\033[38;5;197m'
except:
    pass

# /mnt/k/OU/RadarKit/headers/RadarKit/RKTypes.h: 132
try:
    RKPinkColor = '\\033[38;5;213m'
except:
    pass

# /mnt/k/OU/RadarKit/headers/RadarKit/RKTypes.h: 133
try:
    RKSalmonColor = '\\033[38;5;210m'
except:
    pass

# /mnt/k/OU/RadarKit/headers/RadarKit/RKTypes.h: 134
try:
    RKGrayColor = '\\033[38;5;245m'
except:
    pass

# /mnt/k/OU/RadarKit/headers/RadarKit/RKTypes.h: 135
try:
    RKWhiteColor = '\\033[38;5;15m'
except:
    pass

# /mnt/k/OU/RadarKit/headers/RadarKit/RKTypes.h: 136
try:
    RKMonokaiRed = '\\033[38;5;196m'
except:
    pass

# /mnt/k/OU/RadarKit/headers/RadarKit/RKTypes.h: 137
try:
    RKMonokaiPink = '\\033[38;5;197m'
except:
    pass

# /mnt/k/OU/RadarKit/headers/RadarKit/RKTypes.h: 138
try:
    RKMonokaiOrange = '\\033[38;5;208m'
except:
    pass

# /mnt/k/OU/RadarKit/headers/RadarKit/RKTypes.h: 139
try:
    RKMonokaiYellow = '\\033[38;5;186m'
except:
    pass

# /mnt/k/OU/RadarKit/headers/RadarKit/RKTypes.h: 140
try:
    RKMonokaiGreen = '\\033[38;5;154m'
except:
    pass

# /mnt/k/OU/RadarKit/headers/RadarKit/RKTypes.h: 141
try:
    RKMonokaiBlue = '\\033[38;5;81m'
except:
    pass

# /mnt/k/OU/RadarKit/headers/RadarKit/RKTypes.h: 142
try:
    RKMonokaiPurple = '\\033[38;5;141m'
except:
    pass

# /mnt/k/OU/RadarKit/headers/RadarKit/RKTypes.h: 143
try:
    RKLightOrangeColor = '\\033[38;5;220m'
except:
    pass

# /mnt/k/OU/RadarKit/headers/RadarKit/RKTypes.h: 144
try:
    RKWarningColor = '\\033[38;5;15;48;5;197m'
except:
    pass

# /mnt/k/OU/RadarKit/headers/RadarKit/RKTypes.h: 145
try:
    RKPythonColor = '\\033[38;5;226;48;5;24m'
except:
    pass

# /mnt/k/OU/RadarKit/headers/RadarKit/RKTypes.h: 146
try:
    RKRadarKitColor = '\\033[38;5;15;48;5;124m'
except:
    pass
